v.0.0.10: update ring structurs and add new user info response
